--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "frontsg",
+  "name": "venecitas",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "axios": "^1.6.7",
+    "boxicons": "^2.1.2",
+    "daisyui": "^2.6.4",
+    "formik": "^2.2.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
+    "react-router-dom": "^6.2.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.8.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.0"
+    "@tailwindcss/forms": "^0.5.0",
+    "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8",
+    "postcss-load-config": "^3.1.3",
+    "postcss-nesting": "^10.1.3",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
+    "tailwindcss": "^3.4.1",
+    "vite": "^2.8.0"
   }
 }
